# bbtools-coroutine

./: .gitignore  CMakeLists.txt  README.md  build.sh  fatigue_results.csv
.github/: copilot-instructions.md
.github/agents/: explain.agent.md  explore.agent.md
.github/instructions/: agent-framework-chinese.instructions.md
.github/prompts/: default-chinese-output.prompt.md  opsx-apply.prompt.md  opsx-archive.prompt.md  opsx-explore.prompt.md  opsx-propose.prompt.md
.github/skills/managing-fatigue-tests/: SKILL.md
.github/skills/openspec-apply-change/: SKILL.md
.github/skills/openspec-archive-change/: SKILL.md
.github/skills/openspec-explore/: SKILL.md
.github/skills/openspec-propose/: SKILL.md
.github/workflows/: memery_test_info.yml  unit_test.yml
.opencode/skills/: brainstorming  dispatching-parallel-agents  executing-plans  finishing-a-development-branch  openspec-apply-change  openspec-archive-change  openspec-explore  openspec-propose  receiving-code-review  requesting-code-review  subagent-driven-development  systematic-debugging  test-driven-development  using-git-worktrees  using-superpowers  verification-before-completion  writing-plans  writing-skills
.sisyphus/plans/: rwmutex-enhance.md
.sisyphus/run-continuation/: ses_1d15aeb31ffepYIh5Rn3oOo0EO.json  ses_1d17af80cffeQoNZR5u525J3l8.json
bbt/coroutine/: _CoHelper.hpp  _DeferHelper.hpp  coroutine.cc  coroutine.hpp
bbt/coroutine/detail/: CoEventBase.cc  CoEventBase.hpp  CoPollEvent.cc  CoPollEvent.hpp  CoPoller.cc  CoPoller.hpp  Context.cc  Context.hpp  Coroutine.cc  Coroutine.hpp  CoroutineQueue.cc  CoroutineQueue.hpp  Defer.cc  Defer.hpp  Define.hpp  GlobalConfig.cc  GlobalConfig.hpp  Hook.cc  Hook.hpp  ICoroutine.hpp  LocalThread.cc  LocalThread.hpp  PrintInfo.cc  PrintInfo.hpp  Processer.cc  Processer.hpp  Profiler.cc  Profiler.hpp  Schdueler.hpp  Scheduler.cc  Scheduler.hpp  Stack.cc  Stack.hpp  StackPool.cc  StackPool.hpp  Trace.cc  Trace.hpp  WaitProtocol.hpp  __TCoPoller.hpp
bbt/coroutine/pool/: CoPool.cc  CoPool.hpp  Work.hpp
bbt/coroutine/sync/: Chan.hpp  CoCond.cc  CoCond.hpp  CoLockGuard.hpp  CoMutex.cc  CoMutex.hpp  CoRWMutex.cc  CoRWMutex.hpp  CoWaiter.cc  CoWaiter.hpp  FdEvent.cc  FdEvent.hpp  RWMutex.hpp  StdLockWapper.hpp  __TChan.cc  __TChan.hpp
bbt/coroutine/syntax/: SyntaxMacro.hpp  _CoHelper.hpp  _DeferHelper.hpp  _EventHelper.cc  _EventHelper.hpp  _WaitForHelper.cc  _WaitForHelper.hpp
bbt/coroutine/utils/: DebugPrint.cc  DebugPrint.hpp
benchmark_test/: CMakeLists.txt  README.md  benchmark_chan.cc  benchmark_cocond.cc  benchmark_comutex.cc  benchmark_copool.cc  benchmark_coroutine.cc  chan_fatigue_test.cc  chan_go_align_bench.md  cocond_lockfree_vs_mutex_bench.md  cocond_queue_stress.cc  coroutine_bench_test.cc  coroutine_fatigue_test.cc  fatigue_chan.cc  fatigue_cocond.cc  fatigue_comutex.cc  fatigue_copool.cc  fatigue_coroutine.cc  fatigue_corwmutex.cc  fatigue_metrics.h  fatigue_std_uniquelock.cc  mem_check_test.cc  micro_co_switch.cc  unified_stress.cc
benchmark_test/compare/: 100w_task_bbtco.cc  100w_task_go.go  100w_task_libgo.cc  run.sh
benchmark_test/threadpkbbtco/: queue_vs_chan.cc
debug/: CMakeLists.txt  Debug_bbtcoevent.cc  Debug_chan.cc  Debug_co_rwmutex.cc  Debug_coevent.cc  Debug_comutex.cc  Debug_cond.cc  Debug_coorutine_coevent.cc  Debug_copool.cc  Debug_create_coroutine.cc  Debug_g_co.cc  Debug_globalconfig.cc  Debug_hook_connect.cc  Debug_hook_connect_bug.cc  Debug_hook_sleep.cc  Debug_poller.cc  Debug_regist_co.cc  Debug_scheduler.cc  Debug_steal.cc  Debug_trace.cc
doc/: fatigue.md
docs/: ci-guide.md  testing-contract-spec.md
docs/adr/: 0001-testing-contract.md
example/: CMakeLists.txt  chan.cc  cocond.cc  comutex.cc  consumer_productor.cc  copool.cc  coroutine.cc  waitfor.cc
example/echoserver/: EchoClient.cc  EchoClientMulti.cc  EchoServer.cc
example/http/: co_with_httpserver.cc
example/mysqlpp/: README.md  co_with_mysql.cc  mysql_connection_pool.hpp  user_table.hpp
example/redis/: co_with_hiredis.cc
openspec/: config.yaml
openspec/changes/align-runtime-lifecycle-and-scheduler/: design.md  proposal.md  tasks.md
openspec/changes/migrate-sync-primitives-to-wait-protocol/: design.md  proposal.md  tasks.md
openspec/changes/rwmutex-enhance/: design.md
openspec/changes/split-runtime-spec-by-module/: design.md  proposal.md  tasks.md
openspec/changes/stabilize-hook-and-copool-semantics/: design.md  proposal.md  tasks.md
openspec/specs/chan-basic-correctness/: spec.md
openspec/specs/chan-close-write-safety/: spec.md
openspec/specs/chan-concurrency/: spec.md
openspec/specs/chan-operator-and-integrity/: spec.md
openspec/specs/chan-resource-cleanup/: spec.md
openspec/specs/coroutine-lifecycle/: spec.md
openspec/specs/coroutine-pool-and-api/: spec.md
openspec/specs/runtime-scheduler/: spec.md
scripts/: build_sanitizer.sh  ci_perf_check.py  record_baseline.py  run_fatigue.py  run_parallel_stress.sh
scripts/fatigue_monitor/: fatigue_config.yaml  fatigue_dashboard.html  fatigue_monitor.py  requirements.txt
shell/: build_test.sh  install.sh  poll_test_scheduler.sh  uninstall.sh
tests/reports/: .gitignore  README.md
unit_test/: CMakeLists.txt  Debug_chan.cc  Debug_cond.cc  Debug_create_coroutine.cc  Debug_dbgprintf.cc  Debug_g_co.cc  Debug_hook_sleep.cc  Debug_poller.cc  Debug_scheduler.cc  Debug_steal.cc  Test_chan.cc  Test_co_rwmutex.cc  Test_coevent.cc  Test_comutex.cc  Test_cond.cc  Test_copool.cc  Test_coroutine.cc  Test_coroutine_exception.cc  Test_coroutine_lifecycle_state.cc  Test_coroutine_lifecycle_stress.cc  Test_coroutine_lifecycle_teardown.cc  Test_coroutine_stack.cc  Test_coroutine_trace.cc  Test_coroutinue.cc  Test_defer.cc  Test_fatigue_coroutine.cc  Test_g_co.cc  Test_hook.cc  Test_lockguard.cc  Test_poller.cc  Test_public_api_contract.cc  Test_reliability.cc  Test_rwlock_guard.cc  Test_scheduler_concurrency.cc  Test_scheduler_shutdown.cc  Test_smoke.cc  Test_sync_chan_semantics.cc  Test_sync_cond_mutex_bridge.cc  Test_sync_primitives_stress.cc  Test_sync_rwmutex_fairness.cc  (+6 more)
(+58 files in other folders)
